# outline-mcp

./: .env.example  LICENSE.txt  README.md  pyproject.toml  setup_guide.md
src/: __init__.py  outline_mcp_server.py
tests/: test_server.py
